# PAI-PROJECT

./: Intro_P_0.ipynb  LICENSE  Machine_Learning#0.py  MyNotes.docx  README.md  Tensors.py
Tensorflow_Course/: HelloWorld.py  pyproject.toml
Udemy_Course/: (ANN)_Udemy.ipynb  Udacity_Notes.docx  intro_R.R
