[tool.poetry]
name = "tensorflow-course"
version = "0.1.0"
description = "This environment pretends to serve as an introduction on how to use techniques related to artificial intelligence, this approach will use tensorflow as well as other related libraries"
authors = ["Julio <juliomoreno7217@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.26.0"
openpyxl = "^3.1.2"
rpa = "^1.50.0"
pillow = "^10.0.1"
pandas = "^2.1.1"
xlwings = "^0.30.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
